After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773520 - AutoarExtractor: treat missing case in destination suggestion process
AutoarExtractor: treat missing case in destination suggestion process
Status: RESOLVED FIXED
Product: gnome-autoar
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Autoar maintainer(s)
GNOME Autoar maintainer(s)
: 771418 (view as bug list)
Depends on:
Blocks: 771418
 
 
Reported: 2016-10-26 08:48 UTC by Razvan Chitu
Modified: 2017-01-08 18:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
AutoarExtractor: treat missing case in destination suggestion process (1.41 KB, patch)
2016-10-26 08:52 UTC, Razvan Chitu
committed Details | Review

Description Razvan Chitu 2016-10-26 08:48:28 UTC
See patch.
Comment 1 Razvan Chitu 2016-10-26 08:52:31 UTC
Created attachment 338486 [details] [review]
AutoarExtractor: treat missing case in destination suggestion process

The case of archives having the name of the root element with the format
extension (for example 'sample.odt' in 'sample.odt.zip') was not treated. This
lead to unnecessary folders being created. In order to fix this, check if the
archive's name without extension is the same as the root element's name.
Comment 2 Carlos Soriano 2016-10-26 09:35:11 UTC
Review of attachment 338486 [details] [review]:

As discussed in IRC I think this is the right approach to fix 771418 case.
The code also looks good to me, so marking as reviewed.
Ting-Wei can you take a look?
Comment 3 Carlos Soriano 2016-10-26 09:35:25 UTC
*** Bug 771418 has been marked as a duplicate of this bug. ***
Comment 4 Carlos Soriano 2016-10-26 09:36:14 UTC
And thanks Razvan!
Comment 5 Ting-Wei Lan 2017-01-08 18:18:11 UTC
Attachment 338486 [details] pushed as 7633e86 - AutoarExtractor: treat missing case in destination suggestion process